# JoystickToMouseApplication

./: CMakeLists.txt  CMakePresets.json  JoystickMouse.cpp  JoystickMouse.h  README.md
Settings/: settings.json
Widgets/: JoystickVisualizer.cpp  JoystickVisualizer.h
Windows/: ActivateWindow.cpp  ActivateWindow.h  MainWindow.cpp  MainWindow.h  Navigator.cpp  Navigator.h  SettingsWindow.cpp  SettingsWindow.h
Workflows/: build.yml
